--- a/src/Animals.css
+++ b/src/Animals.css
@@ -5,3 +5,7 @@
   justify-content: center;
   background-image: linear-gradient(to bottom,#d6d6ff,#609063);
 }
+.allCards h4 {
+  width: 100vw;
+  text-align: center;
+}
