--- a/src/Card.css
+++ b/src/Card.css
@@ -1,15 +1,21 @@
+*{
+  margin:0;
+  padding:0;
+}
 .card{
+  font-family: 'Manrope', sans-serif;
   display: flex;
   flex-direction: column;
   width: 200px;
   height: 300px;
-  background-color: antiquewhite;
+  background-color: rgb(48, 56, 45);
   margin: 0.5rem;
   justify-content: space-between;
   align-items: center;
   position: relative;
-  border: black solid ;
-  filter:opacity(0.7);
+  border: rgb(255, 255, 255) solid ;
+  filter:opacity(0.8);
+  color: white;
 }
 .card:hover{
 filter: none;
@@ -30,13 +36,23 @@ filter: none;
   margin: 0.5rem;
 font-size: 1.5rem;
   border: black thin ;
-  background-color: antiquewhite;
+  background-color: rgb(48, 56, 45);
 }
 .close{
   margin: 0;
   position: absolute;
-  top:8px;
-  right: 8px;
-  background-color: rgb(234, 154, 154);
+  top:5px;
+  right: 5px;
+  background-color: white;
+  color: rgb(11, 0, 0);
   border-radius: 5px;
+  width: 1rem;
+  height: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.5rem;
+}
+.counter{
+  width: 3rem;
 }
