--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -12,8 +12,9 @@
 }
 p{
   color: white;
-width: 80%;
+max-width: 1200px;
   font-family: 'Manrope', sans-serif;
-
-  font-size: 2rem;
+  margin: 0 auto;
+  font-size: 1.5rem;
+  line-height: 1.6;
 }
